public/game.css
@import url("game-win-animations.css") screen and (update: fast) and
  (not (prefers-reduced-motion));

legend {
  all: unset;
}

:root {
  font-family: sans-serif;
  --main-highlight-color: hsl(120 100% 50%);
  --subtle-highlight-color: color-mix(
    in srgb,
    var(--main-highlight-color) 30%,
    var(--main-background-color)
  );
  --main-text-color: black;
  --main-background-color: white;
  color: var(--main-text-color);
  background-color: var(--main-background-color);
  color-scheme: light dark;
  accent-color: var(--main-highlight-color);
}

@media (prefers-color-scheme: dark) {
  :root {
    --main-text-color: white;
    --main-background-color: black;
  }
}

::selection {
  background-color: var(--main-highlight-color);
}

body {
  margin: 0;
  display: flex;
  flex-direction: column;
  height: 100svh;
  width: 100svw;
  align-items: stretch;
}

header {
  background-color: var(--subtle-highlight-color);
  padding: 1rem 1rem 0;
  text-align: center;
}

nav {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5em;
  align-items: baseline;
  justify-content: center;
}

@media (orientation: landscape) {
  body {
    flex-direction: row;
  }

  nav {
    flex-direction: column;
  }
}

h1 {
  margin: 0;
}

button {
  background: none;
  border: none;
  text-decoration-line: underline;
  cursor: pointer;
  font-size: 1em;
  margin: 0;
  padding: 0;
  color: var(--main-text-color);
}

a {
  color: var(--main-text-color);
}

a:focus-visible,
a:active,
button:focus-visible,
button:active {
  border-color: var(--main-highlight-color);
  outline-color: var(--main-highlight-color);
}

#maze {
  flex-grow: 1;
  padding: 1rem;
  min-width: 5rem;
  min-height: 5rem;
  aspect-ratio: 1;
  touch-action: pinch-zoom;
  user-select: none;
}

#walls {
  stroke-width: 0.25;
  stroke: var(--main-text-color);
  stroke-linecap: round;
}

#route {
  stroke-width: 0.25;
  stroke: var(--main-highlight-color);
  stroke-linecap: round;
  stroke-linejoin: round;
  fill: none;
}

dialog {
  padding: 0;
  color: var(--main-text-color);
  background-color: var(--main-background-color);
  border-color: var(--main-highlight-color);
  border-width: thin;
}

@media (update: fast) {
  dialog::backdrop {
    backdrop-filter: blur(0.1rem);
  }
}

@media print {
  header,
  dialog,
  #route {
    display: none;
  }
}

/* Have the child of the dialog take up all of it, so that clicks outside of it
are easier to detect. */
dialog > div {
  padding: 0.5em 1em;
  border: 0;
  margin: 0;
}

#optionsDialog form {
  > * {
    display: block;
  }

  > input,
  label,
  legend {
    padding-block: 0.5em;
  }

  fieldset {
    display: contents;

    > label {
      display: grid;
      grid-template-columns: min-content 1fr;
      align-items: baseline;
      gap: 0.5em;
    }
  }
}

#linksDialog ul {
  list-style: none;
  padding: 0;
  display: contents;
  text-align: center;

  li a {
    display: block;
    padding-block: 0.5em;
  }
}

.share-supported {
  display: none;
}

:root.supports-share .share-supported {
  display: initial;
}

:root.supports-share .share-not-supported {
  display: none;
}

